2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* misc.c (lp_use_properties lp_parse): In "set style increment user"
	mode, an explicit linetype should be interpreted as a call for the
	corresponding line style. But if there is none, we should load a
	description of the linetype rather than failing to initialize the
	lp_style_type at all.

2006-03-28  Lars Hecking  <lhecking@users.sourceforge.net>

	* docs/gnuplot.texi: Regenerated after recent documentation updates.

	* term/Makefile.am.in: Add PostScript directory to EXTRA_DIST. Add
	uninstall support. Rename install target to install-data-local (don't
	use automake-generated targets in Makefile.am) and add $(DESTDIR)
	support.

2006-03-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.oww (CPPFLAGS): Added -DEAM_OBJECTS.

	* src/plot2d.c (get_data): Avoid small size increments on
	reallocation --- at least double, and add another 1000 entries for
	good measure.

	* src/win/winmain.c: WANT_GET_DLLVERSION hardcoded active.
	(CSIDL_APPDATA): Provide fallback definition.
	(ShutDown): Removed ancient cruft.
	(appdata_directory): New function.  Dynamically attach to
	shell32.dll and ask it for the "application data" directory.
	(WinMain): Have get_user_env() take care of finding $HOME.
	INIFILE_IN_APPDATA hardcoded.

	* src/win/wcommon.h (INIFILE_IN_APPDATA, WANT_GETDLLVERSION):
	Definitions removed, hardcoded active now.
	(appdata_directory): Added prototype.

	* src/plot.c: Added #includes of win/wgnuplib.h, win/wcommon.h.
	(get_user_env) [WIN32]: Call helper routine to find Windows'
	"application data" directory.

2006-03-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (cp_alloc) src/plot3d.c (sp_alloc): Initialize the
	line style, arrow style, and fill style fields of each new plot to
	something reasonable.

2006-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* NEWS: List various new features added since last October.
